Unflake ActiveTabTest.DelegateIsSet

Source of flakiness: base::RunLoop().RunUntilIdle()

Bug: chromium:770305
Change-Id: I9b37092b67d4189f7afceeed286c9f2210985b25
Reviewed-on: https://chromium-review.googlesource.com/852534
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Ivan Šandrk <isandrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528020}
Former-commit-id: ae9ea252a77feb19465be85ef4e57bffe7384601