chrome/browser/extensions/active_tab_unittest.cc
@@ -37,6 +37,7 @@
 
 #if defined(OS_CHROMEOS)
 #include "base/run_loop.h"
+#include "chrome/browser/chromeos/extensions/active_tab_permission_granter_delegate_chromeos.h"
 #include "chrome/browser/chromeos/login/users/fake_chrome_user_manager.h"
 #include "chrome/browser/chromeos/login/users/wallpaper/wallpaper_manager.h"
 #include "chrome/browser/chromeos/profiles/profile_helper.h"
@@ -444,9 +445,21 @@ TEST_F(ActiveTabTest, Delegate) {
 }
 
 #if defined(OS_CHROMEOS)
+// Keep the unique_ptr around until callback has been run.
+std::unique_ptr<permission_helper::RequestResolvedCallback>
+QuitRunLoopOnRequestResolved(base::RunLoop* run_loop) {
+  auto callback = std::make_unique<permission_helper::RequestResolvedCallback>(
+      base::BindRepeating([](base::RunLoop* run_loop, const PermissionIDSet&) {
+        run_loop->Quit();
+      }, run_loop));
+  ActiveTabPermissionGranterDelegateChromeOS::
+      SetRequestResolvedCallbackForTesting(callback.get());
+  return callback;
+}
+
 // Test that the platform delegate is being set and the permission is prompted
 // for.
-TEST_F(ActiveTabTest, DISABLED_DelegateIsSet) {
+TEST_F(ActiveTabTest, DelegateIsSet) {
   // Necessary to prevent instantiation of ProfileSyncService, which messes with
   // our signin state below.
   base::CommandLine::ForCurrentProcess()->AppendSwitch(switches::kDisableSync);
@@ -481,11 +494,17 @@ TEST_F(ActiveTabTest, DISABLED_DelegateIsSet) {
   {
     ScopedTestDialogAutoConfirm auto_confirm(
         ScopedTestDialogAutoConfirm::ACCEPT);
+
+    base::RunLoop run_loop;
+    auto cb = QuitRunLoopOnRequestResolved(&run_loop);
     active_tab_permission_granter()->GrantIfRequested(extension.get());
-    base::RunLoop().RunUntilIdle();
+    run_loop.Run();
     EXPECT_TRUE(IsBlocked(extension, google));
+
+    base::RunLoop run_loop2;
+    cb = QuitRunLoopOnRequestResolved(&run_loop2);
     active_tab_permission_granter()->GrantIfRequested(extension.get());
-    base::RunLoop().RunUntilIdle();
+    run_loop2.Run();
     EXPECT_TRUE(IsAllowed(extension, google));
   }
 
@@ -493,15 +512,23 @@ TEST_F(ActiveTabTest, DISABLED_DelegateIsSet) {
   {
     ScopedTestDialogAutoConfirm auto_confirm(
         ScopedTestDialogAutoConfirm::CANCEL);
+
+    base::RunLoop run_loop;
+    auto cb = QuitRunLoopOnRequestResolved(&run_loop);
     active_tab_permission_granter()->GrantIfRequested(another_extension.get());
-    base::RunLoop().RunUntilIdle();
+    run_loop.Run();
     EXPECT_TRUE(IsBlocked(another_extension, google));
+
+    base::RunLoop run_loop2;
+    cb = QuitRunLoopOnRequestResolved(&run_loop2);
     active_tab_permission_granter()->GrantIfRequested(another_extension.get());
-    base::RunLoop().RunUntilIdle();
+    run_loop2.Run();
     EXPECT_TRUE(IsBlocked(another_extension, google));
   }
 
   // Cleanup.
+  ActiveTabPermissionGranterDelegateChromeOS::
+      SetRequestResolvedCallbackForTesting(nullptr);
   chromeos::WallpaperManager::Shutdown();
   delete ActiveTabPermissionGranter::SetPlatformDelegate(nullptr);
   chromeos::ChromeUserManager::Get()->Shutdown();
